--- a/src/module/home/home.component.html
+++ b/src/module/home/home.component.html
@@ -1,29 +1,91 @@
-<div class="container pt-3">
-    <h1 class="text-center">Add New Student</h1>
-    <hr class="h-line"/>
-    <form #form="ngForm" (ngSubmit)="onSubmit()">
-        *Name: <input class="m-2" type="text" id="name" required minlength="3" [(ngModel)]="name" name="name">
-        <br/>
-        *Subjects: <input class="m-2" type="text" id = "subjects" required minlength="4" [(ngModel)]="subjects" name="subjects">
-        <br/>
-        
-        <!---- class="d-flex flex-row justify-content-around"---->
-            *Grade: 
-            <input class="m-2" type="radio" id="A_GRADE" name="grade" value="A" required [(ngModel)]="grade">
-            <label for="A_GRADE">A</label>
-            <input class="m-2" type="radio" id="B_GRADE" name="grade" value="B" required [(ngModel)]="grade">
-            <label for="B_GRADE">B</label>
-            <input class="m-2" type="radio" id="C-GRADE" name="grade" value="C" required [(ngModel)]="grade">
-            <label for="C-GRADE">C</label>
-            <input class="m-2" type="radio" id="D-GRADE" name="grade" value="D" required [(ngModel)]="grade">
-            <label for="D-GRADE">D</label>
-            <br/>
-            <button type="submit" class="btn btn-primary btn-sm m-2">Add Student</button>
-            <button type="button" class="btn btn-success btn-sm m-2" (click)="dashboard()">Dashboard</button>
-            
-    </form>
-    <hr  class="h-line"/>
-    <p *ngIf="!isEmpty" class="error">
-        here some values are empty <br/>please fill details properly 
-    </p>
+<div>
+  <h1>Add New Student</h1>
+  <hr />
+  <form
+    #form="ngForm"
+    (ngSubmit)="onSubmit(form, studentName, subjectName, gradeName)"
+  >
+    *Name:
+    <input
+      #studentName="ngModel"
+      type="text"
+      id="name"
+      autocomplete="off"
+      required
+      [(ngModel)]="name"
+      (ngModelChange)="errorGenerate(studentName, subjectName, gradeName)"
+      name="name"
+    />
+    <br />
+    *Subjects:
+    <input
+      #subjectName="ngModel"
+      type="text"
+      autocomplete="off"
+      id="subjects"
+      required
+      [(ngModel)]="subjects"
+      (ngModelChange)="errorGenerate(studentName, subjectName, gradeName)"
+      name="subjects"
+    />
+    <br />
+
+    <!---- class="d-flex flex-row justify-content-around"---->
+    *Grade:
+    <input
+      type="radio"
+      id="A_GRADE"
+      #gradeName="ngModel"
+      name="grade"
+      value="A"
+      required
+      minlength="1"
+      [(ngModel)]="grade"
+      (ngModelChange)="errorGenerate(studentName, subjectName, gradeName)"
+    />
+    <label for="A_GRADE">A</label>
+    <input
+      type="radio"
+      id="B_GRADE"
+      #gradeName="ngModel"
+      name="grade"
+      value="B"
+      required
+      [(ngModel)]="grade"
+      (ngModelChange)="errorGenerate(studentName, subjectName, gradeName)"
+    />
+    <label for="B_GRADE">B</label>
+    <input
+      type="radio"
+      id="C-GRADE"
+      #gradeName="ngModel"
+      name="grade"
+      value="C"
+      required
+      [(ngModel)]="grade"
+      (ngModelChange)="errorGenerate(studentName, subjectName, gradeName)"
+    />
+    <label for="C-GRADE">C</label>
+    <input
+      type="radio"
+      id="D-GRADE"
+      #gradeName="ngModel"
+      name="grade"
+      value="D"
+      required
+      [(ngModel)]="grade"
+      (ngModelChange)="errorGenerate(studentName, subjectName, gradeName)"
+    />
+    <label for="D-GRADE">D</label>
+    <br />
+
+    <button type="button" (click)="cancel()">Cancel</button>
+    <button type="submit" [disabled]="!isTrue">Add Student</button>
+  </form>
+  <button nz-button nzType="primary">Primary</button>
+  <button nz-button nzType="primary">Primary</button>
+  <hr />
+  <p *ngIf="isEmpty">
+    {{ error }}
+  </p>
 </div>
