--- a/src/module/login/login.component.html
+++ b/src/module/login/login.component.html
@@ -1,3 +1,6 @@
-<div class="containerItem d-flex flex-row justify-content-center align-items-center">
-    <button class ="btn btn-primary" (click)="login()">LogIn</button>
+<div
+  class="containerItem d-flex flex-row justify-content-center align-items-center"
+>
+  <button class="btn btn-primary" (click)="login()">LogIn</button>
+  <button nz-button nzType="primary">Primary</button>
 </div>
