nz zorro  button

--- a/src/module/login/login.component.html
+++ b/src/module/login/login.component.html
@@ -1,6 +1,5 @@
 <div
   class="containerItem d-flex flex-row justify-content-center align-items-center"
 >
-  <button class="btn btn-primary" (click)="login()">LogIn</button>
-  <button nz-button nzType="primary">Primary</button>
+  <button nz-button nzType="primary"(click)="login()">LogIn</button>
 </div>
