--- a/src/module/home/home.component.html
+++ b/src/module/home/home.component.html
@@ -79,11 +79,9 @@
     <label for="D-GRADE">D</label>
     <br />
 
-    <button type="button" (click)="cancel()">Cancel</button>
-    <button type="submit" [disabled]="!isTrue">Add Student</button>
+    <button nz-button nzType="primary" (click)="cancel()">Cancel</button>
+    <button nz-button nzType="primary" [disabled]="!isTrue">Add Student</button>
   </form>
-  <button nz-button nzType="primary">Primary</button>
-  <button nz-button nzType="primary">Primary</button>
   <hr />
   <p *ngIf="isEmpty">
     {{ error }}
