--- a/src/module/home/home.component.html
+++ b/src/module/home/home.component.html
@@ -30,7 +30,7 @@
     />
     <br />
 
-    <!---- class="d-flex flex-row justify-content-around"---->
+    <!---- class="d-flex flex-row justify-content-around"--->
     *Grade:
     <input
       type="radio"
